--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webpack-dev-server-simple-mock",
+  "name": "@coco-build/webpack-dev-server-simple-mock",
   "version": "1.0.2",
   "description": "",
   "main": "index.js",
